--- a/RZDKursovoy/ReservationForm.xaml
+++ b/RZDKursovoy/ReservationForm.xaml
@@ -15,10 +15,20 @@
         </GroupBox>
         <GroupBox x:Name="ChooseTrainTypeBox" Header="Выбор места" Margin="0,0,0,0">
             <Grid>
-                <ComboBox x:Name="ChooseRailcarType" HorizontalAlignment="Left" Margin="10,26,0,0" VerticalAlignment="Top" Width="200"/>
-                <Label x:Name="RailcarTypeLab" Content="Выберите тип вагона:&#xD;&#xA;" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" FontWeight="Bold" Height="26" Width="200" HorizontalContentAlignment="Center"/>
-                <Label x:Name="RailcarChooseNumberLab" Content="Выберите номер вагона:" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="255,0,359,0" Width="161" FontWeight="Bold"></Label>
-                <ComboBox x:Name="ChooseRailcarNumberBox" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="255,26,359,0" Width="161"></ComboBox>
+                <Grid x:Name="StepOneGrid">
+                    <ComboBox x:Name="ChooseRailcarType" HorizontalAlignment="Left" Margin="10,26,0,0" VerticalAlignment="Top" Width="240"/>
+                    <Label x:Name="RailcarTypeLab" Content="Выберите тип вагона:&#xD;&#xA;" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" FontWeight="Bold" Height="26" Width="240" HorizontalContentAlignment="Center"/>
+                    <Button x:Name="ChooseRailcarTypeButton" Content="Выбрать" HorizontalAlignment="Left" Margin="10,68,0,0" VerticalAlignment="Top" Click="ChooseRailcarTypeButton_Click" Width="240"/>
+                </Grid>
+                <Grid x:Name="StepTwoGrid">
+                    <Label x:Name="RailcarChooseNumberLab" Content="Выберите номер вагона:" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,0,20,0" Width="190" FontWeight="Bold" HorizontalContentAlignment="Center"></Label>
+                    <ComboBox x:Name="ChooseRailcarNumberBox" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,26,20,0" Width="190"></ComboBox>
+                    <Button x:Name="ChooseRailcarNumberButton" Content="Выбрать" HorizontalAlignment="Center" Margin="0,68,20,0" Click="ChooseRailcarNumberButton_Click" VerticalAlignment="Top" Width="190"/>
+                </Grid>
+                <Grid x:Name="StepThreeGrid" Margin="0,119,0,0">
+                    <Image x:Name="TrainCardImage" Source="Images/Plackart.png" Margin="-27,-10,27,10"></Image>
+                    <RadioButton Margin="157,56,0,0" VerticalAlignment="Top" HorizontalAlignment="Left"></RadioButton>
+                </Grid>
             </Grid>
         </GroupBox>
     </Grid>
