--- a/RZDKursovoy/App.xaml
+++ b/RZDKursovoy/App.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:RZDKursovoy"
              xmlns:dragablz="http://dragablz.net/winfx/xaml/dragablz"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Authorization.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
