--- a/RZDKursovoy/ReservationForm.xaml
+++ b/RZDKursovoy/ReservationForm.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RZDKursovoy"
         mc:Ignorable="d"
-        Title="Резервирование" Height="450" Width="799" ResizeMode="NoResize">
+        Title="Резервирование" Height="450" Width="799" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid>
         <GroupBox x:Name="ChooseTrainBox" Header="Выбор поезда" Margin="0" Visibility="Hidden">
             <Grid>
@@ -35,11 +35,21 @@
                 </Grid>
             </Grid>
         </GroupBox>
-        <GroupBox x:Name="InputPersonalDataBox" Header="Тестовое меню" Margin="0">
+        <GroupBox x:Name="InputPersonalDataBox" Margin="0" BorderBrush="Black" Foreground="Black" Background="{x:Null}">
             <Grid>
-                <TextBox x:Name="PassSeries" HorizontalAlignment="Center" VerticalAlignment="Top" Width="156" Margin="0" Text="Серия паспорта"></TextBox>
-                <TextBox x:Name="PassNumber" HorizontalAlignment="Center" VerticalAlignment="Top" Width="156" Margin="0,40,0,0" Text="№ паспорта"></TextBox>
-                <Button x:Name="InputData" HorizontalAlignment="Center" VerticalAlignment="Top" Content="Отправить данные" Margin="0,80,0,0" Click="InputData_Click"></Button>
+                <Label Content="Имя*" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="45,106,0,0" VerticalAlignment="Top" Width="78"/>
+                <Label Content="Фамилия*" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="45,132,0,0" VerticalAlignment="Top" Width="78"/>
+                <Label Content="Отчество*" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="45,158,0,0" VerticalAlignment="Top" Width="78"/>
+                <Label Content="Телефон" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="45,184,0,0" VerticalAlignment="Top" Width="78" RenderTransformOrigin="0.648,0.538"/>
+                <TextBox x:Name="RegNameBox" Height="24" Margin="123,108,452,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top"/>
+                <TextBox x:Name="RegFamBox" Height="24" Margin="123,134,452,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top"/>
+                <TextBox x:Name="RegPathBox" Height="24" Margin="123,160,452,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top"/>
+                <TextBox x:Name="RegPhoneBox" Height="24" Margin="123,186,452,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top"/>
+                <TextBox x:Name="PassSeries" HorizontalAlignment="Center" VerticalAlignment="Top" Width="200" Margin="474,104,101,0" Text="Серия паспорта"></TextBox>
+                <TextBox x:Name="PassNumber" HorizontalAlignment="Center" VerticalAlignment="Top" Width="200" Margin="474,133,101,0" Text="№ паспорта"></TextBox>
+                <Button x:Name="InputData" HorizontalAlignment="Center" VerticalAlignment="Top" Content="Отправить данные" Margin="11,343,10,0" Click="InputData_Click" Width="754"></Button>
+                <Label Content="Серия паспорта" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="364,106,0,0" VerticalAlignment="Top" Width="105" RenderTransformOrigin="0.648,0.538"/>
+                <Label Content="Номер паспорта" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="364,134,0,0" VerticalAlignment="Top" Width="105" RenderTransformOrigin="0.648,0.538"/>
             </Grid>
         </GroupBox>
     </Grid>
