--- a/RZDKursovoy/MainWindow.xaml
+++ b/RZDKursovoy/MainWindow.xaml
@@ -5,22 +5,27 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RZDKursovoy"
         xmlns:dragablz="http://dragablz.net/winfx/xaml/dragablz"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="Главное меню" Height="291.779" Width="440.148" WindowStartupLocation="CenterScreen">
+        Title="Главное меню" Height="450" Width="799" WindowStartupLocation="CenterScreen">
     <Grid>
-        <dragablz:TabablzControl>
+        <dragablz:TabablzControl x:Name="ControlMenu" Loaded="ControlMenu_Loaded">
             <dragablz:TabablzControl.InterTabController>
                 <dragablz:InterTabController/>
             </dragablz:TabablzControl.InterTabController>
             <TabItem Header="Резервирование" Margin="0">
                 <Grid x:Name="ChooseRout">
-                    <TextBox x:Name="Arrival_TB" Height="23" TextWrapping="Wrap" Text="" Width="120" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="152,20,53,0"/>
-                    <TextBox x:Name="Departure_TB" Height="23" TextWrapping="Wrap" Text="" Width="120" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="100,60,0,40"/>
-                    <Label Content="Точка отправления" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,20,140,0"/>
-                    <Label Content="Точка Назначения" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,60,139,40"/>
-                    <Label Content="Дата" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,100,70,0"/>
-                    <Button x:Name="FindTrain_BUTTON" Content="Найти" Margin="0,140,0,10" Height="Auto" Width="240" VerticalAlignment="Top" HorizontalAlignment="Center" Click="FindTrain_BUTTON_Click"/>
-                    <DatePicker x:Name="Arrival_Date" HorizontalAlignment="Center" Language="Ru-ru" VerticalAlignment="Top" Margin="50, 100,0,0" AutomationProperties.IsOffscreenBehavior="Onscreen" />
+                    <ComboBox PreviewTextInput="Arrival_BOX_PreviewTextInput"  x:Name="Arrival_BOX" materialDesign:HintAssist.Hint="Точка отправления"
+                      IsEditable="True"
+                      Style="{StaticResource MaterialDesignFloatingHintComboBox}" HorizontalAlignment="Center" Margin="0,0,0,140" Width="210">
+                    </ComboBox>
+                    <ComboBox PreviewTextInput="Departure_BOX_PreviewTextInput"  x:Name="Departure_BOX" materialDesign:HintAssist.Hint="Точка назначения"
+                      IsEditable="True"
+                      Style="{StaticResource MaterialDesignFloatingHintComboBox}" HorizontalAlignment="Center" Margin="0,0,0,60" Width="210">
+                    </ComboBox>
+                    <Button x:Name="FindTrain_BUTTON" Content="Найти" Margin="0,100,0,0" Height="Auto" Width="240" VerticalAlignment="Center" HorizontalAlignment="Center" Click="FindTrain_BUTTON_Click"/>
+                    <DatePicker x:Name="Arrival_Date" HorizontalAlignment="Center" Width="210" materialDesign:HintAssist.Hint="Выберите дату"
+  Style="{StaticResource MaterialDesignFloatingHintDatePicker}"  Language="Ru-ru" VerticalAlignment="Center" Margin="0,30,0,0" AutomationProperties.IsOffscreenBehavior="Onscreen" />
                 </Grid>
             </TabItem>
         </dragablz:TabablzControl>
