--- a/RZDKursovoy/Authorization.xaml
+++ b/RZDKursovoy/Authorization.xaml
@@ -37,7 +37,8 @@
                             </StackPanel>
                         </materialDesign:HintAssist.Hint>
                     </TextBox>
-                    <Button x:Name="RegRegButtonBEEP" Margin="0,60,0,0" Content="Зарегистрироваться" Click="RegRegButtonBEEP_Click" HorizontalAlignment="Center" VerticalAlignment="Center" Width="214"/>
+                    <Button x:Name="RegRegButtonBEEP" Margin="0,120,0,0" Content="Зарегистрироваться" Click="RegRegButtonBEEP_Click" HorizontalAlignment="Center" VerticalAlignment="Center" Width="214"/>
+                    <CheckBox x:Name="CheckProcessingPersonalDataBox" Content="Я даю согласие на обработку персональных данных" Margin="0,40,0,0"  HorizontalAlignment="Center" VerticalAlignment="Center"></CheckBox>
                     <Button x:Name="RegExit" Margin="0,0,0,10" Content="Выход" VerticalAlignment="Bottom" Click="RegExit_Click"/>
                 </Grid>
             </GroupBox>
