--- a/RZDKursovoy/ReservationForm.xaml
+++ b/RZDKursovoy/ReservationForm.xaml
@@ -9,7 +9,7 @@
         mc:Ignorable="d"
         Title="Резервирование" Height="450" Width="799" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid>
-        <GroupBox x:Name="ChooseTrainBox" Header="Выбор поезда" Margin="0">
+        <GroupBox x:Name="ChooseTrainBox" Header="Выбор поезда" Margin="0" d:IsHidden="True">
             <Grid>
                 <!--<ListBox x:Name="ChooseTrainListBox" Width="772" Loaded="ChooseTrainListBox_Loaded" Margin="0,0,0,30"/>-->
                 <Button x:Name="ChooseTrainNextButton" VerticalAlignment="Bottom" Content="Далее" Height="29" Margin="0" Click="ChooseTrainNextButton_Click" RenderTransformOrigin="0.497,1.172"/>
@@ -38,23 +38,66 @@
                 </Grid>
             </Grid>
         </GroupBox>
-        <GroupBox x:Name="InputPersonalDataBox" Margin="0" BorderBrush="Black" Header="Ввод данных" Foreground="Black" Background="{x:Null}" d:IsHidden="True">
+        <GroupBox x:Name="InputPersonalDataBox" Margin="0" BorderBrush="Black" Header="Ввод данных" Foreground="Black" Background="{x:Null}">
             <Grid>
-                <!--       <Label Content="Имя*" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="45,86,0,0" VerticalAlignment="Top" Width="78"/>
-                <Label Content="Фамилия*" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="45,112,0,0" VerticalAlignment="Top" Width="78"/>
-                <Label Content="Отчество" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="45,138,0,0" VerticalAlignment="Top" Width="78"/>
-                <Label Content="Телефон" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="45,164,0,0" VerticalAlignment="Top" Width="78" RenderTransformOrigin="0.648,0.538"/>
-                <TextBox x:Name="RegNameBox" PreviewTextInput="RegNameBox_PreviewTextInput" MaxLength="30" Height="24" Margin="123,88,452,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top"/>
-                <TextBox x:Name="RegFamBox" MaxLength="30" Height="24" Margin="123,114,452,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top"/>
-                <TextBox x:Name="RegPathBox" MaxLength="30" Height="24" Margin="123,140,452,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top"/>
-                <TextBox x:Name="RegPhoneBox" MaxLength="11" Height="24" Margin="123,166,452,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top"/>
-                <TextBox x:Name="PassSeries" MaxLength="4" HorizontalAlignment="Right" VerticalAlignment="Center" Width="200" Margin="0,0,54,115"></TextBox>
-                <TextBox x:Name="PassNumber" MaxLength="4" HorizontalAlignment="Right" VerticalAlignment="Center" Width="200" Margin="0,0,54,60"></TextBox>
-                <Label Content="Серия паспорта*" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="410,112,0,0" VerticalAlignment="Top" Width="105" RenderTransformOrigin="0.648,0.538"/>
-                <Label Content="Номер паспорта*" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="410,140,0,0" VerticalAlignment="Top" Width="105" RenderTransformOrigin="0.648,0.538"/> -->
-                <Button x:Name="InputData" VerticalAlignment="Bottom" Content="Отправить данные" Margin="45,0,45,70" Click="InputData_Click"/>
-                <xctk:MaskedTextBox x:Name="_maskedTextBox" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="349,213,262,135" Width="164" Height="21" BorderBrush="Black" GotFocus="_maskedTextBox_GotFocus"/>
-                <TextBox x:Name="PassNumber" MaxLength="4" HorizontalAlignment="Center" VerticalAlignment="Center" Width="200" Margin="0,0,0,234"/>
+                <TextBox x:Name="RegFamBox" PreviewTextInput="RegFamBox_PreviewTextInput" MaxLength="30" Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Center" Margin="0,0,0,0" VerticalAlignment="Top" Height="36" Width="200">
+                    <materialDesign:HintAssist.Hint>
+                        <StackPanel
+                                    Orientation="Horizontal"
+                                    Margin="-2 0 0 0">
+                            <TextBlock>
+                                    Фамилия*
+                            </TextBlock>
+                        </StackPanel>
+                    </materialDesign:HintAssist.Hint>
+                </TextBox>
+                <TextBox MaxLength="30" x:Name="RegNameBox" PreviewTextInput="RegNameBox_PreviewTextInput" Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Center" Margin="0,40,0,0" VerticalAlignment="Top" Height="40" Width="200">
+                    <materialDesign:HintAssist.Hint>
+                        <StackPanel
+                                    Orientation="Horizontal"
+                                    Margin="-2 0 0 0">
+                            <TextBlock>
+                                    Имя*
+                            </TextBlock>
+                        </StackPanel>
+                    </materialDesign:HintAssist.Hint>
+                </TextBox>
+                <TextBox x:Name="RegPathrBox" PreviewTextInput="RegPathrBox_PreviewTextInput"  Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Center" Margin="0,80,0,0" VerticalAlignment="Top" MaxLength="30" Height="40" Width="200">
+                    <materialDesign:HintAssist.Hint>
+                        <StackPanel
+                                    Orientation="Horizontal"
+                                    Margin="-2 0 0 0">
+                            <TextBlock>
+                                    Отчество
+                            </TextBlock>
+                        </StackPanel>
+                    </materialDesign:HintAssist.Hint>
+                </TextBox>
+                <materialDesign:PackIcon VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,230,71" Kind="Phone" />
+                <xctk:MaskedTextBox x:Name="_maskedTextBox" LostFocus="_maskedTextBox_LostFocus" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,140,0,0" Width="200" Height="20" GotFocus="_maskedTextBox_GotFocus"/>
+                <TextBox x:Name="RegPassSeries" PreviewTextInput="RegPassSeries_PreviewTextInput" Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Center" Margin="0,160,0,0" VerticalAlignment="Top" MaxLength="6" Height="40" Width="200">
+                    <materialDesign:HintAssist.Hint>
+                        <StackPanel
+                                    Orientation="Horizontal"
+                                    Margin="-2 0 0 0">
+                            <TextBlock>
+                                    Серия паспорта*
+                            </TextBlock>
+                        </StackPanel>
+                    </materialDesign:HintAssist.Hint>
+                </TextBox>
+                <TextBox x:Name="RegPassNumber" PreviewTextInput="RegPassNumber_PreviewTextInput" Style="{StaticResource MaterialDesignFloatingHintTextBox}" HorizontalAlignment="Center" Margin="0,200,0,0" MaxLength="4" VerticalAlignment="Top" Height="40" Width="200">
+                    <materialDesign:HintAssist.Hint>
+                        <StackPanel
+                                    Orientation="Horizontal"
+                                    Margin="-2 0 0 0">
+                            <TextBlock>
+                                    Номер паспорта*
+                            </TextBlock>
+                        </StackPanel>
+                    </materialDesign:HintAssist.Hint>
+                </TextBox>
+                <Button x:Name="InputData" VerticalAlignment="Bottom" Content="Отправить данные" Margin="45,0,45,50" Click="InputData_Click"/>
                 <Label Content="AVB Inc PRODUCTION" HorizontalAlignment="Left" Margin="0" VerticalAlignment="Bottom" IsEnabled="False" Height="25" Width="775" HorizontalContentAlignment="Center"/>
             </Grid>
         </GroupBox>
